# pop-gtk-theme

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
.github/: ISSUE_TEMPLATE.md
debian/: changelog  control  copyright  rules
extra/: Makefile.am
extra/chrome/pop-nokto-theme/: manifest.json
extra/chrome/pop-theme/: manifest.json
extra/gedit/: README.md  pop.xml
extra/plank/: dock.theme
extra/telegram/dark/: colors.tdesktop-theme  pop.tdesktop-theme
extra/telegram/light/: colors.tdesktop-theme  create-theme.sh  pop.tdesktop-theme
gtk/: Makefile.am  index.theme  index.theme-eta  index.theme-nokto  index.theme-nokto-eta
gtk/asset/: assets-gtk2.svg.in  assets-gtk3.svg.in
gtk/asset/assets-gtk2-scripts/: assets-gtk2-entry.txt  clone-assets-gtk2.sh  recolor-assets-gtk2.sh  render-assets-gtk2-arrow.sh  render-assets-gtk2-button.sh  render-assets-gtk2-checkradio.sh  render-assets-gtk2-column.sh  render-assets-gtk2-entry.sh  render-assets-gtk2-handle.sh  render-assets-gtk2-misc.sh  render-assets-gtk2-range.sh  render-assets-gtk2-scrollbar.sh  render-assets-gtk2-spin.sh  render-assets-gtk2.sh
gtk/asset/assets-gtk3-scripts/: assets-clone-gtk3.txt  clone-assets-gtk3.sh  recolor-assets-gtk3.sh  render-assets-gtk3-checkbox.sh  render-assets-gtk3-misc.sh  render-assets-gtk3-radio.sh  render-assets-gtk3-slider.sh  render-assets-gtk3-toggle.sh  render-assets-gtk3-windowbutton-eta.sh  render-assets-gtk3-windowbutton.sh  render-assets-gtk3.sh
gtk/gtk-2.0/: colors-dark.rc.in  colors.rc.in  recolor-gtk2.sh
gtk/sass/: README  compile-gresource.sh  gtk-dark.gresource.xml.in  gtk.gresource.xml.in  parse-sass.sh
gtk/sass/3.18/: _3rd-party.scss  _common.scss  _misc.scss
gtk/sass/3.20/: _3rd-party.scss  _common.scss  _misc.scss
gtk/sass/3.22/: _3rd-party.scss  _common.scss  _misc.scss
gtk/sass/4.0/: _3rd-party.scss  _common.scss  _misc.scss
gtk/sass/common/: _colors-public.scss  _colors.scss  _drawing-legacy.scss  _drawing.scss  _xfce-notify.scss
m4/: adapta-color-scheme.m4  pop-color-scheme.m4  pop-gnome.m4  pop-option.m4
shell/: Makefile.am
shell/asset/: clone-assets-cinnamon.sh  clone-assets-gnome-shell.sh  clone-assets-unity.sh  clone-assets-xfce.sh  render-assets-cinnamon-thumb.sh
shell/asset/assets-gnome-shell/common/: activities-active.svg.in  activities.svg.in  window-close-hover.svg.in  window-close.svg.in
shell/sass/: README  gnome-shell-theme.gresource.sh  parse-sass.sh
shell/sass/cinnamon/: _common.scss
shell/sass/common/: _colors.scss  _drawing.scss
shell/sass/gnome-shell/: _common.scss  _extension-workspaces-to-dock.scss  _pad-osd-window.scss
shell/sass/gnome-shell/3.24/: _common.scss
shell/sass/gnome-shell/3.26/: _common.scss
shell/xfce-notify-4.0/: gtkrc
wm/: Makefile.am
wm/asset/assets-metacity/: button_close_pressed.svg.in
wm/asset/assets-metacity-scripts/: clone-assets-metacity.sh  render-assets-metacity.sh
wm/asset/assets-openbox-scripts/: clone-assets-openbox.sh
wm/asset/assets-xfwm/: close-prelight.svg.in  close-pressed.svg.in  menu-pressed.svg.in
wm/asset/assets-xfwm-scripts/: recolor-assets-xfwm.sh  render-assets-xfwm-button.sh  render-assets-xfwm-edge.sh  render-assets-xfwm-title.sh  render-assets-xfwm.sh
wm/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
wm/openbox-3/: themerc  themerc-nokto
wm/xfwm4/: themerc
